test/good/loops/continue3.px

i = 0
until true do
    i += 1
    if i < 17 do
        continue
    print i
