test/bad/basic/indent02.px

if true do
    x = 1 +
 2
